--- a/heart_model/Heart Predictions.ipynb
+++ b/heart_model/Heart Predictions.ipynb
@@ -111,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "linear_svc=SVC(kernel='linear')"
+    "linear_svc=SVC(kernel='linear', probability=True)"
    ]
   },
   {
@@ -123,8 +123,8 @@
      "data": {
       "text/plain": [
        "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape=None, degree=3, gamma='auto', kernel='linear',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
+       "  max_iter=-1, probability=True, random_state=None, shrinking=True,\n",
        "  tol=0.001, verbose=False)"
       ]
      },
@@ -150,22 +150,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7894736842105263"
+       "0.77631578947368418"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "linear_svc.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.56142896,  0.43857104])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear_svc.predict_proba(x_test.iloc[[2]])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>110</td>\n",
+       "      <td>248</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>158</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slop\n",
+       "73   65    1   4       110   248    0        2      158      0      0.6     1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.iloc[[2]]"
    ]
   }
  ],
